@@ -5,8 +5,8 @@ from actions import Action
 from object_factory import ObjectFactory
 
 class Driver(Proxy):
-  def __init__(self, host, user, passwd):
-    super(Driver, self).__init__(host, user, passwd)
+  def __init__(self, host, user, passwd, group=None):
+    super(Driver, self).__init__(host, user, passwd, group)
     self.object_factory = ObjectFactory(self)
 
   def get_all_instances(self, klass):
