@@ -11,7 +11,6 @@ from kb_object_creator import KBObjectCreator
 OME_HOST = os.getenv("OME_HOST", "localhost")
 OME_USER = os.getenv("OME_USER", "root")
 OME_PASS = os.getenv("OME_PASS", "romeo")
-OME_KEEP = int(os.getenv("OME_KEEP", 1))
 
 class TestKB(KBObjectCreator, unittest.TestCase):
   " "
@@ -20,7 +19,7 @@ class TestKB(KBObjectCreator, unittest.TestCase):
     self.kill_list = []
 
   def setUp(self):
-    self.kb = KB(driver='omero')(OME_HOST, OME_USER, OME_PASS, OME_KEEP)
+    self.kb = KB(driver='omero')(OME_HOST, OME_USER, OME_PASS)
 
   def test_enums(self):
     for ename in ['ContainerStatus', 'AffymetrixCelArrayType',
